# fuzzy-parakeet

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/actions/deploy-guard/: action.yml
.github/workflows/: deploy-guard.yml
demo/helm/: Chart.yaml
demo/helm/templates/: deployment.yaml
demo/k8s/: deployment.yaml
demo/tf/: main.tf
deploy_guard/: __main__.py  cli.py  models.py  service.py
deploy_guard/llm/: providers.py  redaction.py
deploy_guard/reporting/: json_report.py  markdown_report.py
deploy_guard/rules/: core_rules.py  engine.py  extensions.py
deploy_guard/scanners/: detector.py  helm.py  k8s.py  terraform.py
docs/adr/: 0001-architecture-and-boundaries.md  0002-llm-safety-and-opt-in-network.md
tests/: test_detector.py  test_markdown.py  test_redaction.py  test_scoring.py
